# project-euler

./: .gitignore  README.md  pyproject.toml
scripts/001/: main.py
src/project_euler/: __init__.py
