[project]
name = "project-euler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "polars>=1.18.0",
    "typer>=0.15.1",
]

[project.scripts]
project-euler = "project_euler:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
